新增修改功能
- MainWindow 與 MethodWindow 建立 ContextMenu 以供使用者進行資料修改
- 目前尚未防堵使用者於空白處點擊問題

--- a/URScriptMethodBuilder/MainWindow.xaml
+++ b/URScriptMethodBuilder/MainWindow.xaml
@@ -31,6 +31,12 @@
 			</StackPanel>
 		</Grid>
 		<ListBox Grid.Row="1" Name="lbMthd" Margin="0,0,0,0" SelectionMode="Single"
-			ItemsSource="{Binding Methods}" SelectedItem="{Binding SelectedMethod}" />
+			ItemsSource="{Binding Methods}" SelectedItem="{Binding SelectedMethod}">
+			<ListBox.ContextMenu>
+				<ContextMenu>
+					<MenuItem Header="View and Modify" Click="Modify_Clicked"/>
+				</ContextMenu>
+			</ListBox.ContextMenu>
+		</ListBox>
 	</Grid>
 </mahapps.ctrl:MetroWindow>
