--- a/URScriptMethodBuilder/App.xaml
+++ b/URScriptMethodBuilder/App.xaml
@@ -12,6 +12,28 @@
 				<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
 				<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
 			</ResourceDictionary.MergedDictionaries>
+			<Style x:Key="LabelBox" TargetType="TextBox">
+				<Setter Property="VerticalContentAlignment" Value="Center"/>
+				<Setter Property="FontFamily" Value="Source Code Pro"/>
+				<Setter Property="FontSize" Value="14"/>
+			</Style>
+			<Style x:Key="EditBox" TargetType="TextBox">
+				<Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
+				<Setter Property="TextWrapping" Value="Wrap"/>
+				<Setter Property="AcceptsReturn" Value="True"/>
+				<Setter Property="AcceptsTab" Value="True"/>
+				<Setter Property="FontFamily" Value="Source Code Pro"/>
+				<Setter Property="FontSize" Value="14"/>
+			</Style>
+			<Style x:Key="Title" TargetType="TextBlock">
+				<Setter Property="VerticalAlignment" Value="Top"/>
+				<Setter Property="HorizontalAlignment" Value="Center"/>
+			</Style>
+			<Style x:Key="IndentTitle" TargetType="TextBlock">
+				<Setter Property="Margin" Value="0,5,0,0"/>
+				<Setter Property="VerticalAlignment" Value="Top"/>
+				<Setter Property="HorizontalAlignment" Value="Center"/>
+			</Style>
 		</ResourceDictionary>
 	</Application.Resources>
 </Application>
