--- a/URScriptMethodBuilder/App.xaml
+++ b/URScriptMethodBuilder/App.xaml
@@ -19,7 +19,17 @@
 			</Style>
 			<Style x:Key="EditBox" TargetType="TextBox">
 				<Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
+				<Setter Property="HorizontalScrollBarVisibility" Value="Auto"/>
 				<Setter Property="TextWrapping" Value="Wrap"/>
+				<Setter Property="AcceptsReturn" Value="True"/>
+				<Setter Property="AcceptsTab" Value="True"/>
+				<Setter Property="FontFamily" Value="Source Code Pro"/>
+				<Setter Property="FontSize" Value="14"/>
+			</Style>
+			<Style x:Key="ParaBox" TargetType="TextBox">
+				<Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
+				<Setter Property="HorizontalScrollBarVisibility" Value="Auto"/>
+				<Setter Property="TextWrapping" Value="NoWrap"/>
 				<Setter Property="AcceptsReturn" Value="True"/>
 				<Setter Property="AcceptsTab" Value="True"/>
 				<Setter Property="FontFamily" Value="Source Code Pro"/>
