--- a/URScriptMethodBuilder/Views/MethodWindow.xaml
+++ b/URScriptMethodBuilder/Views/MethodWindow.xaml
@@ -34,7 +34,7 @@
 		</StackPanel>
 		<TextBox Grid.Row="0" Grid.Column="1" Margin="5,0,5,5" Style="{StaticResource LabelBox}"
 			Text="{Binding Method.Name, Mode=TwoWay}"/>
-		<TextBox Grid.Row="2" Grid.Column="1" Margin="5,5,5,5" Style="{StaticResource EditBox}"
+		<TextBox Grid.Row="2" Grid.Column="1" Margin="5,5,5,5" Style="{StaticResource ParaBox}"
 			Text="{Binding Method.Comment, Mode=TwoWay}"/>
 		<TextBox Grid.Row="3" Grid.Column="1" Margin="5,5,5,5" Style="{StaticResource EditBox}"
 			Text="{Binding Method.Signature.Return, Mode=TwoWay}"/>
