--- a/URScriptMethodBuilder/Views/MethodWindow.xaml
+++ b/URScriptMethodBuilder/Views/MethodWindow.xaml
@@ -48,6 +48,8 @@
 			<StackPanel Grid.Column="1" Margin="2.5,0,0,0">
 				<Button Content="+" Click="Add_Clicked"/>
 				<Button Content="-" Click="Delete_Clicked"/>
+				<Button Content="↑" Click="MoveUp_Clicked" Margin="0,60,0,0"/>
+				<Button Content="↓" Click="MoveDown_Clicked"/>
 			</StackPanel>
 			<DataGrid Grid.Column="0" Margin="0,0,2.5,0" Name="dgPara" AutoGenerateColumns="False"
 				BorderBrush="WhiteSmoke" BorderThickness="1" FontSize="14"
